--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,19 +38,26 @@ services:
   db:
     image: postgres:14
     container_name: postgres-diff
-    network_mode: service:vpn-proton
     env_file:
       - .env
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
+      POSTGRES_DB: ${DB_NAME}
       PG_DATA: /var/lib/postgresql/data
     volumes:
       - pgdata:/var/lib/postgresql/data
+      #- /var/run/postgresql:/var/run/postgresql
     ports:
       - 5432:5432
     restart: always
+
+  adminer:
+    image: adminer:standalone
+    container_name: adminer-diff
+    restart: always
+    ports:
+      - 7878:8080
 
 volumes:
   pgdata:
