--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,29 +35,32 @@ services:
       - 51413:51413/udp
     restart: "unless-stopped"
 
-  db:
-    image: postgres:14
-    container_name: postgres-diff
+  database:
+    image: postgres:13.9-alpine3.17
+    container_name: yt-db
+    ports:
+      - "5432:5432"
+    restart: always
     env_file:
       - .env
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-      PG_DATA: /var/lib/postgresql/data
     volumes:
-      - pgdata:/var/lib/postgresql/data
-      #- /var/run/postgresql:/var/run/postgresql
-    ports:
-      - 5432:5432
-    restart: always
+      - ./pgdata:/var/lib/postgresql/data
 
   adminer:
-    image: adminer:standalone
-    container_name: adminer-diff
+    image: adminer:4.8.1-standalone
+    container_name: adminer
     restart: always
+    depends_on:
+      - database
     ports:
-      - 7878:8080
+      - 8080:8080
 
+  #http://localhost:8080/?pgsql=database&username=ytdiff&db=vidlist&ns=public
+
+# will implement later
 volumes:
-  pgdata:
+  ytdata: 
