will try to add the node into base os container

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 yt-dlp/
-ffmpeg/
-.ipynb_checkpoints/
-*.webm
-*.m4a
-*.txt
-embedding.ipynb
-.env
+ytdata/
+node_modules/
 gluetun/
-pgdata/
+ffmpeg/
