--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/sagniKdas53/yt-diff/issues"
   },
-  "homepage": "https://github.com/sagniKdas53/yt-diff#readme"
+  "homepage": "https://github.com/sagniKdas53/yt-diff#readme",
+  "dependencies": {
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
+  }
 }
