--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,45 @@
 version: '3'
 services:
-  #diff-maker:
-  #  image: purevert/yt-diff
-  #  container_name: yt-diff
-  #  network_mode: service:vpn-proton
-  #  build:
-  #    context: .
-  #    dockerfile: Dockerfile
-  #  volumes:
-  #    - ./yt-dlp:/home
-  #  privileged: true
+
+  database:
+    image: postgres:13.9-alpine3.17
+    container_name: yt-db
+    ports:
+      - "5432:5432"
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - ./ytdata:/var/lib/postgresql/data
+
+  diff-maker:
+    image: purevert/yt-diff
+    container_name: yt-diff
+    # network_mode: service:vpn-proton
+    build:
+      context: .
+      dockerfile: Dockerfile.base
+    volumes:
+      - ./yt-dlp:/home
+    depends_on:
+      - database
+    ports:
+      - 8888:8888
+    privileged: true
+
+  adminer:
+    image: adminer:4.8.1-standalone
+    container_name: adminer
+    restart: always
+    depends_on:
+      - database
+    ports:
+      - 8080:8080
+  #http://localhost:8080/?pgsql=database&username=ytdiff&db=vidlist&ns=public
 
   #vpn-proton:
   #  image: qmcgaw/gluetun
@@ -35,32 +65,6 @@ services:
   #    - 51413:51413/udp
   #  restart: "unless-stopped"
 
-  database:
-    image: postgres:13.9-alpine3.17
-    container_name: yt-db
-    ports:
-      - "5432:5432"
-    restart: always
-    env_file:
-      - .env
-    environment:
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
-    volumes:
-      - ./ytdata:/var/lib/postgresql/data
-
-  adminer:
-    image: adminer:4.8.1-standalone
-    container_name: adminer
-    restart: always
-    depends_on:
-      - database
-    ports:
-      - 8080:8080
-
-  #http://localhost:8080/?pgsql=database&username=ytdiff&db=vidlist&ns=public
-
-# will implement later
+  # will implement later
 volumes:
-  ytdata: 
+  ytdata:
