--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -33,21 +33,17 @@ COPY index.js index.html package-lock.json package.json /
 
 EXPOSE 8888
 
-#This will get the install.sh
-#RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+# Doing it manually to make it faster
+#RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
 
-# Adding nvm from local filesystem, although the actual node is installed form network
-COPY nvm/install.sh /
+COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
 
-RUN chmod +x install.sh && ./install.sh 
-
-# This is needed in both cases
-RUN export NVM_DIR="$HOME/.nvm" && \
-    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && \
-    [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" && \
-    nvm install 18.12 && npm install 
-
-COPY --chown=node:node . .
+RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
+    && cd node-v18.12.1-linux-x64/bin \
+    && mv node ../../bin \
+    && cd ../.. \
+    && node node-v18.12.1-linux-x64/lib/node_modules/npm/bin/npm-cli.js install \
+    && rm -rf node-v18.12.1-linux-x64 node-v18.12.1-linux-x64.tar.xz 
 
 # Only this fails to connect to port 5432 of localhost
 # ConnectionRefusedError [SequelizeConnectionRefusedError]: connect ECONNREFUSED 127.0.0.1:5432
