--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^5.2.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "socket.io": "^4.6.0",
+    "websocket": "^1.0.34"
   }
 }
