--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
-    "socket.io": "^4.6.0",
-    "websocket": "^1.0.34"
+    "socket.io": "^4.6.0"
   }
 }
