traefik works now (i hope so)

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ TZ_PREFERRED=Asia/Kolkata
 DB_USERNAME=ytdiff
 DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
+
+HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
+TIME_ZONE='Asia/Kolkata'
