--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
 version: "3"
+
+networks:
+  revProxy-net:
+    external: true
+
 services:
   yt-db:
     image: postgres:14
@@ -8,6 +13,8 @@ services:
     restart: always
     env_file:
       - .env
+    networks:
+      - revProxy-net
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -15,7 +22,7 @@ services:
     volumes:
       - ./yt-data:/var/lib/postgresql/data
 
-  diff-maker:
+  yt-diff:
     image: purevert/yt-diff:latest
     container_name: yt-diff
     # network_mode: service:vpn-proton
@@ -26,8 +33,30 @@ services:
       - ./yt-dlp:/yt-dlp
     depends_on:
       - yt-db
+    networks:
+      - revProxy-net
     ports:
       - 8888:8888
+    labels:
+      - 'traefik.enable=true'
+      ## HTTP Router
+      #### Entry point where ytdiff is accessible via
+      #### Change secure to https in the line below to have accessible without needing to specify a port and change the SSLHost option below
+      - 'traefik.http.routers.ytdiff.entryPoints=web,websecure'
+      #### Host or Path where ytdiff is accessible
+      #### Remove (or change) this rule if you'd rather have ytdiff accessible at a PathPrefix URI
+      # I don't like having the socket.io in another path but whatever
+      - 'traefik.http.routers.ytdiff.rule=Host(`${HOSTNAME}`) && PathPrefix(`/ytdiff`)'
+      #### Set the correct port
+      - "traefik.http.services.ytdiff.loadbalancer.server.port=8888"
+      - 'traefik.http.services.ytdiff.loadBalancer.passHostHeader=true'
+      #### Prefix stripper
+      #- "traefik.http.middlewares.strip-ytdiff.stripprefix.prefixes=/ytdiff"
+      - "traefik.http.routers.ytdiff.middlewares=http-to-https@docker"
+      #### Using the tailscale ones
+      - "traefik.http.routers.ytdiff.tls=true"
+      - "traefik.http.routers.ytdiff.tls.certresolver=tailsolver"
+      - "traefik.http.routers.ytdiff.tls.domains[0].main=${HOSTNAME}"
     #privileged: true
 
   adminer:
@@ -38,6 +67,27 @@ services:
       - yt-db
     ports:
       - 8080:8080
+    networks:
+      - revProxy-net
+    labels:
+      - 'traefik.enable=true'
+      ## HTTP Router
+      #### Entry point where adminer is accessible via
+      #### Change secure to https in the line below to have accessible without needing to specify a port and change the SSLHost option below
+      - 'traefik.http.routers.adminer.entryPoints=web,websecure'
+      #### Host or Path where adminer is accessible
+      #### Remove (or change) this rule if you'd rather have adminer accessible at a PathPrefix URI
+      - 'traefik.http.routers.adminer.rule=Host(`${HOSTNAME}`) && PathPrefix(`/adminer`)'
+      #### Set the correct port
+      - "traefik.http.services.adminer.loadbalancer.server.port=8080"
+      - 'traefik.http.services.adminer.loadBalancer.passHostHeader=true'
+      #### Prefix stripper
+      - "traefik.http.middlewares.strip-adminer.stripprefix.prefixes=/adminer"
+      - "traefik.http.routers.adminer.middlewares=strip-adminer@docker,http-to-https@docker"
+      #### Using the tailscale ones
+      - "traefik.http.routers.adminer.tls=true"
+      - "traefik.http.routers.adminer.tls.certresolver=tailsolver"
+      - "traefik.http.routers.adminer.tls.domains[0].main=${HOSTNAME}"
   #http://localhost:8080/?pgsql=yt-db&username=ytdiff&db=vidlist&ns=public
 
   #vpn-proton:
@@ -65,5 +115,5 @@ services:
   #  restart: "unless-stopped"
 
   # will implement later
-#volumes:
-#  ytdata:
+  #volumes:
+  #  ytdata:
