--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -25,6 +25,14 @@ RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ../.. \
     && rm -rf ffmpeg-master-latest-linux64-gpl ffmpeg-master-latest-linux64-gpl.tar.xz
 
+COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+
+RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
+    && cd phantomjs-2.1.1-linux-x86_64/bin \
+    && mv ffmpeg ffplay ffprobe ../../bin \
+    && cd ../.. \
+    && rm -rf phantomjs-2.1.1-linux-x86_64.tar.bz2 phantomjs-2.1.1-linux-x86_64
+
 COPY index.js index.html package-lock.json package.json favicon.ico show.html nav.png /
 
 EXPOSE 8888
