--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -4,20 +4,20 @@ FROM debian:stable-slim
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
-    && apt install ca-certificates xz-utils wget -y 
-#&& rm -rf /var/lib/apt/lists/*
+    && apt install ca-certificates xz-utils bzip2 wget -y \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /
 
-COPY /ffmpeg/yt-dlp_linux /
+#COPY /ffmpeg/yt-dlp_linux /
 
-#RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
+RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
 
 RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
-#RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz"
+RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz"
 
-COPY /ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz /
+#COPY /ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz /
 
 RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ffmpeg-master-latest-linux64-gpl/bin \
@@ -25,11 +25,13 @@ RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ../.. \
     && rm -rf ffmpeg-master-latest-linux64-gpl ffmpeg-master-latest-linux64-gpl.tar.xz
 
-COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
+
+#COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
-    && mv ffmpeg ffplay ffprobe ../../bin \
+    && mv phantomjs ../../bin \
     && cd ../.. \
     && rm -rf phantomjs-2.1.1-linux-x86_64.tar.bz2 phantomjs-2.1.1-linux-x86_64
 
@@ -38,9 +40,9 @@ COPY index.js index.html package-lock.json package.json favicon.ico show.html na
 EXPOSE 8888
 
 # Doing it manually to make it faster
-#RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
+RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
 
-COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
+#COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
 
 RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && cd node-v18.12.1-linux-x64/bin \
