--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,8 +1,6 @@
-FROM ubuntu:22.04
-
-RUN echo 'APT::Install-Suggests "0";' >> /etc/apt/apt.conf.d/00-docker
-
-RUN echo 'APT::Install-Recommends "0";' >> /etc/apt/apt.conf.d/00-docker
+FROM debian:stable-slim
+# This for x86_64 will make one for AArch64
+# This one is made using binaries from github python one would have become too large too fast
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
@@ -11,15 +9,15 @@ RUN DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /
 
-# COPY /amd64/yt-dlp_linux /
+#COPY /ffmpeg/yt-dlp_linux /
 
-RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
+RUN wget "https://github.com/yt-dlp/yt-dlp/releases/download/2023.02.17/yt-dlp_linux_aarch64" -O "yt-dlp_linux"
 
 RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
-# COPY /amd64/ffmpeg-master-latest-linux64-gpl.tar.xz /
-
 RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg-master-latest-linux64-gpl.tar.xz"
+
+#COPY /ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz /
 
 RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ffmpeg-master-latest-linux64-gpl/bin \
@@ -27,9 +25,9 @@ RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ../.. \
     && rm -rf ffmpeg-master-latest-linux64-gpl ffmpeg-master-latest-linux64-gpl.tar.xz
 
-# COPY /amd64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
-
 RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
+
+#COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
@@ -39,9 +37,12 @@ RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
 
 COPY index.js index.html client.js package-lock.json package.json favicon.ico dbi.html dbi.client.js nav.png /
 
-# COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
+EXPOSE 8888
 
+# Doing it manually to make it faster
 RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
+
+#COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
 
 RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && cd node-v18.12.1-linux-x64/bin \
@@ -51,6 +52,6 @@ RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && rm -rf node-v18.12.1-linux-x64 node-v18.12.1-linux-x64.tar.xz \
     && sed -i 's/localhost/yt-db/g' index.js
 
-EXPOSE 8888
-
 CMD [ "node", "index.js" ]
+
+#CMD ["tail", "-f", "/dev/null"]
