--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -4,30 +4,30 @@ FROM debian:stable-slim
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
-    && apt install ca-certificates xz-utils bzip2 wget -y \
+    && apt install ca-certificates xz-utils bzip2 wget libexpat1 -y \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /
 
-#COPY /ffmpeg/yt-dlp_linux /
+#COPY /aarch64/yt-dlp_linux /
 
 RUN wget "https://github.com/yt-dlp/yt-dlp/releases/download/2023.02.17/yt-dlp_linux_aarch64" -O "yt-dlp_linux"
 
 RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
-RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg-master-latest-linux64-gpl.tar.xz"
+RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz" -O "ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz"
 
-#COPY /ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz /
+#COPY /aarch64/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz /
 
-RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
-    && cd ffmpeg-master-latest-linux64-gpl/bin \
+RUN tar -xf ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz \
+    && cd ffmpeg-n5.1-latest-linuxarm64-gpl-5.1/bin \
     && mv ffmpeg ffplay ffprobe ../../bin \
     && cd ../.. \
-    && rm -rf ffmpeg-master-latest-linux64-gpl ffmpeg-master-latest-linux64-gpl.tar.xz
+    && rm -rf ffmpeg-n5.1-latest-linuxarm64-gpl-5.1 ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz
 
 RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
 
-#COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+#COPY /aarch64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
@@ -39,19 +39,16 @@ COPY index.js index.html client.js package-lock.json package.json favicon.ico db
 
 EXPOSE 8888
 
-# Doing it manually to make it faster
-RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
+#COPY /nvm/node-v18.12.1-linux-arm64.tar.xz /
 
-#COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
+RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-arm64.tar.xz" -O "node-v18.12.1-linux-arm64.tar.xz"
 
-RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
-    && cd node-v18.12.1-linux-x64/bin \
+RUN tar -xf node-v18.12.1-linux-arm64.tar.xz  \
+    && cd node-v18.12.1-linux-arm64/bin \
     && mv node ../../bin \
     && cd ../.. \
-    && node node-v18.12.1-linux-x64/lib/node_modules/npm/bin/npm-cli.js install \
-    && rm -rf node-v18.12.1-linux-x64 node-v18.12.1-linux-x64.tar.xz \
+    && node node-v18.12.1-linux-arm64/lib/node_modules/npm/bin/npm-cli.js install \
+    && rm -rf node-v18.12.1-linux-arm64 node-v18.12.1-linux-arm64.tar.xz \
     && sed -i 's/localhost/yt-db/g' index.js
 
 CMD [ "node", "index.js" ]
-
-#CMD ["tail", "-f", "/dev/null"]
