--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -9,7 +9,7 @@ RUN DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /
 
-#COPY /ffmpeg/yt-dlp_linux /
+#COPY /amd64/yt-dlp_linux /
 
 RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
 
@@ -17,7 +17,7 @@ RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
 RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg-master-latest-linux64-gpl.tar.xz"
 
-#COPY /ffmpeg/ffmpeg-master-latest-linux64-gpl.tar.xz /
+#COPY /amd64/ffmpeg-master-latest-linux64-gpl.tar.xz /
 
 RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ffmpeg-master-latest-linux64-gpl/bin \
@@ -27,7 +27,7 @@ RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
 
 RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
 
-#COPY /ffmpeg/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+#COPY /amd64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
@@ -39,10 +39,9 @@ COPY index.js index.html client.js package-lock.json package.json favicon.ico db
 
 EXPOSE 8888
 
-# Doing it manually to make it faster
-RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
-
 #COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
+
+RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
 
 RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && cd node-v18.12.1-linux-x64/bin \
@@ -53,5 +52,3 @@ RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && sed -i 's/localhost/yt-db/g' index.js
 
 CMD [ "node", "index.js" ]
-
-#CMD ["tail", "-f", "/dev/null"]
