--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -9,15 +9,15 @@ RUN DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /
 
-#COPY /aarch64/yt-dlp_linux /
+COPY /aarch64/yt-dlp_linux /
 
-RUN wget "https://github.com/yt-dlp/yt-dlp/releases/download/2023.02.17/yt-dlp_linux_aarch64" -O "yt-dlp_linux"
+#RUN wget "https://github.com/yt-dlp/yt-dlp/releases/download/2023.02.17/yt-dlp_linux_aarch64" -O "yt-dlp_linux"
 
 RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
-RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz" -O "ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz"
+#RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz" -O "ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz"
 
-#COPY /aarch64/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz /
+COPY /aarch64/ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz /
 
 RUN tar -xf ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz \
     && cd ffmpeg-n5.1-latest-linuxarm64-gpl-5.1/bin \
@@ -25,9 +25,9 @@ RUN tar -xf ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz \
     && cd ../.. \
     && rm -rf ffmpeg-n5.1-latest-linuxarm64-gpl-5.1 ffmpeg-n5.1-latest-linuxarm64-gpl-5.1.tar.xz
 
-RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
+#RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
 
-#COPY /aarch64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+COPY /aarch64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
@@ -39,9 +39,9 @@ COPY index.js index.html client.js package-lock.json package.json favicon.ico db
 
 EXPOSE 8888
 
-#COPY /nvm/node-v18.12.1-linux-arm64.tar.xz /
+#RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-arm64.tar.xz" -O "node-v18.12.1-linux-arm64.tar.xz"
 
-RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-arm64.tar.xz" -O "node-v18.12.1-linux-arm64.tar.xz"
+COPY /aarch64/node-v18.12.1-linux-arm64.tar.xz /
 
 RUN tar -xf node-v18.12.1-linux-arm64.tar.xz  \
     && cd node-v18.12.1-linux-arm64/bin \
