--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -9,15 +9,15 @@ RUN DEBIAN_FRONTEND=noninteractive \
 
 WORKDIR /
 
-#COPY /amd64/yt-dlp_linux /
+COPY /amd64/yt-dlp_linux /
 
-RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
+#RUN wget "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp_linux" -O "yt-dlp_linux"
 
 RUN chmod +x yt-dlp_linux && mv yt-dlp_linux bin/yt-dlp
 
-RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg-master-latest-linux64-gpl.tar.xz"
+COPY /amd64/ffmpeg-master-latest-linux64-gpl.tar.xz /
 
-#COPY /amd64/ffmpeg-master-latest-linux64-gpl.tar.xz /
+#RUN wget "https://github.com/yt-dlp/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz" -O "ffmpeg-master-latest-linux64-gpl.tar.xz"
 
 RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ffmpeg-master-latest-linux64-gpl/bin \
@@ -25,9 +25,9 @@ RUN tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz \
     && cd ../.. \
     && rm -rf ffmpeg-master-latest-linux64-gpl ffmpeg-master-latest-linux64-gpl.tar.xz
 
-RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
+COPY /amd64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
 
-#COPY /amd64/phantomjs-2.1.1-linux-x86_64.tar.bz2 /
+#RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2" -O "phantomjs-2.1.1-linux-x86_64.tar.bz2"
 
 RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd phantomjs-2.1.1-linux-x86_64/bin \
@@ -39,9 +39,9 @@ COPY index.js index.html client.js package-lock.json package.json favicon.ico db
 
 EXPOSE 8888
 
-#COPY /nvm/node-v18.12.1-linux-x64.tar.xz /
+COPY /amd64/node-v18.12.1-linux-x64.tar.xz /
 
-RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
+#RUN wget "https://nodejs.org/dist/v18.12.1/node-v18.12.1-linux-x64.tar.xz" -O "node-v18.12.1-linux-x64.tar.xz"
 
 RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && cd node-v18.12.1-linux-x64/bin \
