--- a/.env
+++ b/.env
@@ -11,4 +11,17 @@ DB_USERNAME=ytdiff
 DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
 
-HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
+# YT-DIFF options
+
+PROTOCOL_YTDIFF=https
+HOSTNAME_YTDIFF=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
+PORT_YTDIFF=8888
+BASE_URL_YTDIFF=/ytdiff
+
+SAVE_PATH_YTDIFF=yt-dlp
+SLEEP_YTDIFF=3
+SAVE_SUBSTITLES_YTDIFF=false
+
+# TO USE GLUTEN yt-db needs a static ip
+
+DB_HOST=172.20.10.10
