vpn isn't that necessary

--- a/.env
+++ b/.env
@@ -1,27 +1,19 @@
-USERNAME_VPN=vLNPY.2wFHAFOuc5uyms-uuB
-PASSWORD_VPN=ArT6ieA1DF+1jgRuOyDrwYIk
-
-SERVICE_PROVIDER_VPN=protonvpn
-FREE=on
-
-SERVER_COUNTRIES_PREFERRED=Netherlands
 TZ_PREFERRED=Asia/Kolkata
+
+# YT-DB options
 
 DB_USERNAME=ytdiff
 DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
+DB_HOST=yt-db
 
 # YT-DIFF options
 
-PROTOCOL_YTDIFF=https
-HOSTNAME_YTDIFF=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
-PORT_YTDIFF=8888
-BASE_URL_YTDIFF=/ytdiff
+PROTOCOL=https
+HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
+PORT=8888
+BASE_URL=/ytdiff
 
-SAVE_PATH_YTDIFF=yt-dlp
-SLEEP_YTDIFF=3
-SAVE_SUBSTITLES_YTDIFF=false
-
-# TO USE GLUTEN yt-db needs a static ip
-
-DB_HOST=172.20.10.10
+SAVE_PATH=yt-dlp
+SLEEP=3
+SAVE_SUBSTITLES=false
