--- a/vpn-mode/docker-compose.yml
+++ b/vpn-mode/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   yt-diff:
     image: purevert/yt-diff:amd64
     container_name: yt-diff
-    network_mode: service:vpn-proton
+    network_mode: service:gluetun
     build:
       context: ../
       dockerfile: Dockerfile.amd64
@@ -75,9 +75,9 @@ services:
       - "traefik.http.routers.adminer.tls.certresolver=tailsolver"
       - "traefik.http.routers.adminer.tls.domains[0].main=${HOSTNAME_YTDIFF}"
 
-  vpn-proton:
+  gluetun:
     image: qmcgaw/gluetun
-    container_name: vpn-proton
+    container_name: gluetun
     cap_add:
       - NET_ADMIN
     env_file:
