--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/sagniKdas53/yt-diff#readme",
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "cron": "^2.2.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
