--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -35,7 +35,7 @@ RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd ../.. \
     && rm -rf phantomjs-2.1.1-linux-x86_64.tar.bz2 phantomjs-2.1.1-linux-x86_64
 
-COPY index.js index.html client.js package-lock.json package.json favicon.ico dbi.html dbi.client.js nav.png /
+COPY index.js index.html client.js package-lock.json package.json favicon.ico dbi.html nav.png /
 
 EXPOSE 8888
 
