added sub directories

--- a/.env
+++ b/.env
@@ -8,12 +8,20 @@ DB_NAME=vidlist
 DB_HOST=yt-db
 
 # YT-DIFF options
-
 PROTOCOL=https
 HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 
+# Using a relative path is okey, but a absolute path works best
 SAVE_PATH=yt-dlp
-SLEEP=3
-SAVE_SUBSTITLES=false
+SLEEP=3 # 0 works but don't use it, please
+SAVE_SUBSTITLES=true
+SAVE_DESCRIPTION=true
+SAVE_COMMENTS=true
+SAVE_THUMBNAIL=true
+
+# CRON expression used here, use https://crontab.guru/ for examples
+UPDATE_SCHEDULED=0 */12 * * *
+# Options full/quick (only programmed quick for now but full can be added soon)
+UPDATE_TYPE=full
