TODO: Fix lits_order bug, some lists fail

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - yt-db
     networks:
       - revProxy-net
-    port:
+    ports:
       - ${PORT}:${PORT}
     environment:
       - host=${HOSTNAME}
