--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -4,7 +4,7 @@ FROM ubuntu:22.04
 
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get update \
-    && apt install ca-certificates xz-utils bzip2 wget -y \
+    && apt install ca-certificates xz-utils bzip2 wget fontconfig -y \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /
@@ -35,7 +35,9 @@ RUN tar -xf phantomjs-2.1.1-linux-x86_64.tar.bz2 \
     && cd ../.. \
     && rm -rf phantomjs-2.1.1-linux-x86_64.tar.bz2 phantomjs-2.1.1-linux-x86_64
 
-COPY index.js index.html client.js package-lock.json package.json favicon.ico dbi.html nav.png /
+ENV OPENSSL_CONF=/dev/null
+
+COPY cors-allowed.js index.html client.js package-lock.json package.json favicon.ico dbi.html nav.png /
 
 EXPOSE 8888
 
@@ -50,4 +52,4 @@ RUN tar -xf node-v18.12.1-linux-x64.tar.xz  \
     && node node-v18.12.1-linux-x64/lib/node_modules/npm/bin/npm-cli.js install \
     && rm -rf node-v18.12.1-linux-x64 node-v18.12.1-linux-x64.tar.xz 
 
-CMD [ "node", "index.js" ]
+CMD [ "node", "cors-allowed.js" ]
