--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_USERNAME=ytdiff
 DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=./yt-data
+DB_LOCATION=/home/sagnik/Projects/rewrite/backend/yt-data
 
 # YT-DIFF options
 PROTOCOL=https
