--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "downloads videos and watches for changes using yt-dlp and maintains a database",
   "main": "index.js",
   "scripts": {
+    "dev": "node --watch index.js",
     "serve": "node index.js"
   },
   "repository": {
