just some house keeping

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-TZ_PREFERRED=Asia/Kolkata
-
 # YT-DB options
 
 DB_USERNAME=ytdiff
@@ -13,6 +11,7 @@ PROTOCOL=https
 HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
+HIDE_PORTS=true
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp
@@ -25,3 +24,4 @@ SAVE_THUMBNAIL=true
 
 # CRON expression used here, use https://crontab.guru/ for examples
 UPDATE_SCHEDULED=0 */12 * * *
+TZ_PREFERRED=Asia/Kolkata
