--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       # Use this to modify the files during building
     volumes:
       - ${HOST_SAVE_PATH}:/${SAVE_PATH}
-      - /home/sagnik/Projects/rewrite/frontend/dist:/dist
+      - ./react/dist:/dist
     depends_on:
       - yt-db
     networks:
