--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       # Use this to modify the files during building
     volumes:
       - ${HOST_SAVE_PATH}:/${SAVE_PATH}
-      - ./react/dist:/dist
+      - /home/sagnik/Projects/material/dist:/dist
     depends_on:
       - yt-db
     networks:
