having ports open isn't such a bad idea for tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       - yt-db
     networks:
       - revProxy-net
+    # expose:
+    #   - ${PORT}
     ports:
       - ${PORT}:${PORT}
     environment:
