--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/sagniKdas53/yt-diff#readme",
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "cli-color": "^2.0.3",
     "cron": "^2.3.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
