--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Kolkata",
         "pornhub",
         "pornstar",
+        "reinit",
         "spankbang",
         "sublist",
         "uuidv",
