--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "frontend"]
 	path = frontend
 	url = https://github.com/sagniKdas53/yt-diff-react
+[submodule "virtualized"]
+	path = virtualized
+	url = https://github.com/sagniKdas53/yt-diff-react
+	branch = material-virtualized
