no longer such a wasteful url is needed

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_LOCATION=/home/sagnik/Documents/yt-data
 
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=lenovo-ideapad-320-15ikb.tail9ece4.ts.net
+HOSTNAME=ideapad.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
