--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
 DB_HOST=yt-db
 DB_LOCATION=/home/sagnik/Documents/yt-data
+DB_DUMP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db
 
 # YT-DIFF options
 PROTOCOL=https
