--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ networks:
 
 services:
   yt-db:
-    # TODO: Update to postgres:14-alpine@sha256:50d9be76e9a90da4c781554955e0ffc79d9d5c4226838e64b36aacc97cbc35ad after backup
-    image: postgres:14
+    image: postgres:14.10-alpine3.18
     container_name: yt-db
     ports:
       - 5432:5432
