made passwords use secrets and backup work.

--- a/.env
+++ b/.env
@@ -1,15 +1,14 @@
 # YT-DB options
 
 DB_USERNAME=ytdiff
-DB_PASSWORD=ytd1ff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=/media/admin/external/yt-data/yt-data-pri
-DB_DUMP_LOCATION=/media/admin/external/yt-data/yt-data-bkp
+DB_LOCATION=/home/sagnik/Documents/yt-data
+DB_DUMP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db
 
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=raspberrypi.tail9ece4.ts.net
+HOSTNAME=ideapad.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
