--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ networks:
   revProxy-net:
     external: true
 
+secrets:
+   db_password:
+     file: db_password.txt
+
 services:
   yt-db:
     image: postgres:14.10-alpine3.18
@@ -13,11 +17,13 @@ services:
     restart: always
     env_file:
       - .env
+    secrets:
+      - db_password
     networks:
       - revProxy-net
     environment:
       POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_PASSWORD: /run/secrets/db_password
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - ${DB_LOCATION}:/var/lib/postgresql/data
@@ -27,12 +33,18 @@ services:
     image: prodrigestivill/postgres-backup-local
     env_file:
       - .env
+    secrets:
+      - db_password
     environment:
       POSTGRES_HOST: yt-db
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      SCHEDULE: "@daily"
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_password
+      TZ: Asia/Kolkata
+      BACKUP_KEEP_DAYS: 4
+      BACKUP_KEEP_WEEKS: 3
+      BACKUP_KEEP_MONTHS: 2
+      SCHEDULE: "0 0 * * *"
       BACKUP_NUM_KEEP: 3
       BACKUP_DIR: /db_dumps
     volumes:
@@ -69,6 +81,8 @@ services:
       - protocol=${PROTOCOL}
       - base_url=${BASE_URL}
       - db_host=${DB_HOST}
+      - db_user=${DB_USERNAME}
+      - db_password=/run/secrets/db_password
       - port=${PORT}
       - hide_ports=${HIDE_PORTS}
       - save_loc=${SAVE_PATH}
@@ -79,6 +93,8 @@ services:
       - thumbnail=${SAVE_THUMBNAIL}
       - time_zone=${TZ_PREFERRED}
       - scheduled=${UPDATE_SCHEDULED}
+    secrets:
+      - db_password
     labels:
       - 'traefik.enable=true'
       - 'traefik.http.routers.ytdiff.entryPoints=web,websecure'
