added native https and fixed some listing issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "cSpell.words": [
         "atleast",
         "filesize",
+        "fullchain",
         "getplay",
         "getsub",
         "Kolkata",
         "pornhub",
         "pornstar",
+        "privkey",
         "reinit",
         "spankbang",
         "sublist",
