--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ HOSTNAME=ideapad.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
+NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
